--- a/css/3_B2B-index.css
+++ b/css/3_B2B-index.css
@@ -5,7 +5,8 @@
 .background {
   width: 100%;
   height: 750px;
-  background-color: #ffc024;
+  background: url(/imgs/b2b/b2b背景_工作區域\ 1.jpg) center no-repeat;
+  background-size: contain;
 }
 
 .index {
