--- a/css/3_B2B-ticket-list.css
+++ b/css/3_B2B-ticket-list.css
@@ -4,7 +4,8 @@
 
 .background {
   width: 100%;
-  background-color: #ffc024;
+  background: url(../imgs/b2b/b2b_background.jpg) center no-repeat;
+  background-size: cover;
 }
 
 .ticketbg {
