--- a/css/3_B2B-member-profile.css
+++ b/css/3_B2B-member-profile.css
@@ -5,7 +5,8 @@
 .background {
   width: 100%;
   height: 1150px;
-  background-color: #ffc024;
+  background: url(../imgs/b2b/b2b_background.jpg) center no-repeat;
+  background-size: cover;
 }
 .mamberbg {
   margin: 0 auto;
