--- a/css/3_B2B-Create-Event.css
+++ b/css/3_B2B-Create-Event.css
@@ -36,7 +36,7 @@
   text-align: center;
 }
 
-span {
+label {
   font-size: 16px;
   font-weight: bold;
   line-height: 1.5;
@@ -68,6 +68,11 @@ span {
   border-radius: 0%;
 }
 
+textarea:focus,
+input:focus {
+  color: black !important;
+}
+
 .textarea {
   margin: 12px 0 0;
   border: solid 3px #030101;
@@ -75,15 +80,17 @@ span {
   overflow: auto;
 }
 
-.pricesetting {
-  justify-content: flex-end;
+.blanket {
+  width: 80%;
+  height: 100%;
 }
 
 .pricetag {
   height: 50px;
-  margin: 23px 0 0;
   border: solid 3px #030101;
   background-color: white;
   font-size: 1.5em;
   font-weight: bold;
+  margin: 12px 0 23px;
+  text-align: center;
 }
