--- a/css/2_member-order.css
+++ b/css/2_member-order.css
@@ -89,6 +89,9 @@ body {
 }
 
 /* ----------pagination---------- */
+.pagination{
+  text-align: center;
+}
 
 .page-link {
   background-color: transparent;
