--- a/css/3_B2B-ticket-list.css
+++ b/css/3_B2B-ticket-list.css
@@ -1,6 +1,6 @@
-/* * {
+* {
   outline: 1px solid red;
-} */
+}
 
 .background {
   width: 100%;
@@ -132,4 +132,47 @@ table {
   background-color: #ed5b4c;
   border: 3px solid #000;
   border-radius: 0;
+}
+
+/* 提醒小卡css */
+.modal-content {
+  border-radius: 0px;
+  width: 300px;
+  height: 400px;
+  background-color: #fff;
+  border: 3px solid #000;
+}
+
+.welcome-text {
+  font-size: 0.9rem;
+  text-align: center;
+  font-weight: 600;
+}
+.modal-header {
+  border-bottom: 0 none;
+}
+
+.modal-footer {
+  padding: 0;
+  border-top: 0 none;
+}
+
+.modal-title {
+  font-size: 24px;
+  font-weight: 700;
+}
+
+.yes {
+  width: 190px;
+  height: 50px;
+  border-radius: 0px;
+  border: 3px solid #000;
+}
+
+.closebutton {
+  width: 190px;
+  height: 50px;
+  border-radius: 0px;
+  border: 3px solid #000;
+  color: #000 !important;
 }
