--- a/css/3_B2B-sign-in.css
+++ b/css/3_B2B-sign-in.css
@@ -6,9 +6,13 @@ input:focus {
   color: #000 !important;
 }
 
+textarea:focus {
+  color: #000 !important;
+}
+
 .background {
   width: 100%;
-  height: 1800px;
+  height: 1700px;
   background: url(../imgs/b2b/b2b_background.jpg) center no-repeat;
   background-size: cover;
 }
@@ -93,6 +97,12 @@ input:focus {
   margin-top: 12px;
   width: 100%;
   height: 300px;
+  border: 3px solid #000;
+}
+
+textarea {
+  margin-top: 12px;
+  resize: none;
   border: 3px solid #000;
 }
 
