--- a/css/0_index.css
+++ b/css/0_index.css
@@ -102,6 +102,18 @@ body {
     font-size: 8vw;
   }
 
+  .bubble {
+    top: calc(50% - 250px);
+    left: calc(50% - 250px);
+  }
+
+  .brand-intro {
+    position: absolute;
+    top: calc(50% - 211px);
+    left: 45%;
+    z-index: 1;
+  }
+
   .about-slogan {
     font-size: 3rem;
     font-weight: 600;
@@ -198,7 +210,18 @@ body {
   }
 
   .bubble {
-    width: 50%;
+    top: calc(50% - 30%);
+    left: calc(50% - 30%);
+  }
+
+  .bubble img {
+    width: 70%;
+  }
+
+  .brand-intro {
+    background-color: #ed5b4c;
+    border: 3px solid #000;
+    padding: 10px;
   }
 
   .about-slogan {
@@ -208,7 +231,7 @@ body {
   }
 
   .sub-slogan {
-    font-size: 0.9rem;
+    font-size: 1rem;
     margin-bottom: 0.5rem;
   }
 }
@@ -455,8 +478,6 @@ a:hover {
 
 .bubble {
   z-index: 100;
-  top: calc(50% - 250px);
-  left: calc(50% - 250px);
 }
 
 .blue-marquee {
@@ -476,8 +497,6 @@ a:hover {
 }
 
 .brand-intro {
-  top: calc(50% - 211px);
-  left: 45%;
   z-index: 1;
 }
 
