--- a/css/5_shopCart-pay.css
+++ b/css/5_shopCart-pay.css
@@ -6,9 +6,10 @@
     min-height: 90vh;
 }
 
+/* 
 .form-title {
     border-bottom: 3px solid black;
-}
+} */
 
 .payway-wrap {
     cursor: pointer;
@@ -28,16 +29,27 @@
     height: 300px;
 }
 
-/* .confirm {
-    display: none;
-    width: 100%;
-    height: 100%;
-    z-index: 51;
-    top: 0;
-    left: 0;
-    overflow: auto;
-    background-color: rgba(0, 0, 0, 0.4);
-} */
+.form-control {
+    border: 2px solid black;
+    margin: 10px 0 10px 0px;
+    border-radius: 0;
+}
+
+.form-control:focus {
+    border-color: #FFC026;
+    box-shadow: 0 0 0 0.2rem rgba(255, 192, 38, 0.25);
+}
+
+/* Modal */
+.modal-content {
+    min-height: 60vh;
+    top: 15%;
+}
+
+small {
+    color: #ED5B4C;
+    font-size: .8rem;
+}
 
 /* ====== Ｍedia Query =============== */
 /* Extra small 超小 (576px 以下) */
