--- a/css/4_productList.css
+++ b/css/4_productList.css
@@ -71,25 +71,75 @@ button:focus {
 }
 
 .filter-bg {
-    height: 200px;
     background-color: rgba(0, 0, 0, 0.5);
+    border-radius: 5px;
 }
 
 .event-search {
     height: 60%;
 }
 
+h1 {
+    font-size: 2rem;
+}
 
+/* input或text area打字時是黑色的字 */
 textarea:focus,
 input:focus {
     outline: 2px solid #168FA4;
     color: black !important;
 }
 
-.choose {
-    height: 300px;
+/* 下拉篩選框 */
+.search-dropdown {
+    display: none;
+    top: 50px;
     background-color: #fff;
+    border-radius: 3px;
+    height: 200px;
+    z-index: 1;
+    color: black;
 }
+
+.search-dropdown .title {
+    color: #168FA4;
+    font-weight: 600;
+
+}
+
+.search-dropdown ul li a {
+    color: #333;
+    display: flex;
+    padding: 15px 10px;
+    font-size: .8rem;
+}
+
+.search-dropdown ul li a:hover {
+    text-decoration: none;
+    background: #f4f4f4;
+}
+
+
+
+/* 關鍵字區塊 */
+.gap {
+    width: 10px;
+    border-right: 2px solid white;
+}
+
+.chip a {
+    font-size: .8rem;
+    color: white;
+    border: 1px solid white;
+    border-radius: 100px;
+    padding: 2px 12px;
+}
+
+.chip a:hover {
+    text-decoration: none;
+    background-color: hsla(0, 0%, 100%, .2);
+}
+
 
 /* 本週主打精選 */
 
