--- a/css/2_member-service.css
+++ b/css/2_member-service.css
@@ -35,7 +35,55 @@ body {
     height: 8rem;
   }
 
-
+  .sm-none{
+    display: none;
+  }
 }
 
 /* ----------form---------- */
+.label{
+  background-color: #168FA4;
+  border: 3px solid #000;
+  flex: 1;
+  padding: 15px 0;
+  font-size: 16px;
+  font-weight: bold;
+  letter-spacing: 2.55px;
+}
+
+.short-label{
+  width: 26%;
+}
+
+input{
+  flex: 3;
+  border: 3px solid #000;
+}
+
+.service input:focus {
+  color: #000;
+}
+
+textarea{
+  border: 3px solid #000;
+}
+
+.service-submit{
+  border: 3px solid #000;
+  background-color: #FFC024;
+  border-radius: 0;
+  font-size: 16px;
+  font-weight: bold;
+  letter-spacing: 2.55px;
+}
+
+.clear{
+  border: 3px solid #fff;
+  background-color: transparent;
+  color: #fff;
+  border-radius: 0;
+  font-size: 16px;
+  font-weight: bold;
+  letter-spacing: 2.55px;
+}
+
