--- a/css/4_product-detail.css
+++ b/css/4_product-detail.css
@@ -81,6 +81,69 @@ body {
   text-align: center;
 }
 
+.activity {
+  /* width: 500px; */
+}
+
+.activity-title {
+    font-size: 28px;
+}
+
+.activity-time {
+    font-size: 24px;
+}
+
+.activity-place {
+    font-size: 24px;
+}
+
+/* ------留言板------- */
+
+.name-bar {
+  border-bottom: 3px solid black;
+  margin: auto;
+  /* width: 900px; */
+}
+.bar-circle {
+  width: 80px;
+  height: 80px;
+  border-radius: 50%;
+  border: 3px solid black;
+  margin: 20px 20px 20px 0;
+}
+
+.bar-title {
+  margin: auto 20px auto 0;
+}
+
+.bar-word {
+  margin: auto 0 auto 0;
+}
+
+.search-bar {
+  /* width: 900px; */
+  /* height: 100px; */
+  margin: 40px auto;
+  border: 3px solid black;
+}
+
+input {
+  height: 50px;
+}
+
+.search-bar-out {
+  /* width: 850px; */
+  /* height: 100px; */
+  margin: auto 20px auto;
+}
+
+.search-bar-ser {
+  width: 150px;
+  /* height: 100px; */
+  border-left: 3px solid black;
+  background-color: #002c80;
+}
+
 /* --------tabs------- */
 
 /*タブ切り替え全体のスタイル*/
@@ -149,6 +212,21 @@ input[name="tab_item"] {
 
 .tab_content p {
   font-size: 20px;
+  line-height: 30px;
+}
+
+.message-board {
+  width: 100%;
+  height: 500px;
+  background-color: #fff;
+  border: 3px solid black;
+}
+
+/* -----相關活動----- */
+
+.container-fluid {
+    background-image: url(../imgs/member/section-4.svg);
+    height: 600px;
 }
 
 /* ====== Ｍedia Query ============= */
