--- a/css/3_B2B-sign-in.css
+++ b/css/3_B2B-sign-in.css
@@ -80,7 +80,7 @@ textarea:focus {
 }
 
 .inputform {
-  margin: 40px auto 0;
+  margin: 35px auto 0;
   padding: 0;
 }
 
@@ -90,11 +90,26 @@ textarea:focus {
   font-weight: 700;
 }
 
+.trouble {
+  position: absolute;
+  right: 10px;
+  top: 45px;
+  z-index: 1;
+}
+
+.trouble2 {
+  /* display: none; */
+  margin-top: 5px;
+  text-align: end;
+  color: #ff1000    ;
+}
+
 .inputbox {
   margin-top: 12px;
   width: 100%;
   height: 50px;
   border: 3px solid #000;
+  position: relative;
 }
 
 .inputboxint {
