--- a/css/3_B2B-Create-Event.css
+++ b/css/3_B2B-Create-Event.css
@@ -148,7 +148,7 @@ input:focus {
 
   .background {
     width: 100%;
-    height: 100%;
+    height: 400vh;
     background: url(../imgs/b2b/b2b_background.jpg) center no-repeat;
     background-size: cover;
     padding-bottom: 20%;
