--- a/css/4_productList.css
+++ b/css/4_productList.css
@@ -162,14 +162,41 @@ input:focus {
 .card {
     background-color: transparent;
     border: none;
-    transition: transform 1s;
 }
 
-.card:hover {
-    transform: scale(1.1);
-    /* box-shadow: 3px 5px rgba(0, 0, 0, 0.5); */
+/* 翻轉卡片 */
+.flip-card-inner {
+    height: 300px;
+    transition: transform 0.8s;
+    transform-style: preserve-3d;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
 }
 
+.flip-card:hover .flip-card-inner {
+    transform: rotateY(180deg);
+}
+
+.flip-card:hover .time {
+    opacity: 0;
+}
+
+.flip-card-front,
+.flip-card-back {
+    width: 100%;
+    height: 100%;
+    -webkit-backface-visibility: hidden;
+    backface-visibility: hidden;
+}
+
+.flip-card-back {
+    transform: rotateY(180deg);
+    background-color: #FFC024;
+    color: #168FA4;
+    line-height: 1.5;
+
+    overflow: hidden;
+
+}
 
 /* 活動小卡圖片 */
 .card .img-wrap {
@@ -189,6 +216,7 @@ input:focus {
     background-color: #FFC024;
     height: 50px;
     border-radius: 3px;
+    transition: 0.8s;
 
 }
 
