--- a/css/4_product-detail.css
+++ b/css/4_product-detail.css
@@ -48,8 +48,13 @@ body {
   padding-left: 10px;
 }
 
-.space-2 {
+.space-1 {
   height: 50px;
+  width: 100%;
+}
+
+.space-2 {
+  height: 200px;
   width: 100%;
 }
 
@@ -215,11 +220,17 @@ input[name="tab_item"] {
   line-height: 30px;
 }
 
+.tape-1 {
+  position: absolute;
+  top: -112px;
+}
+
 .message-board {
   width: 100%;
   height: 500px;
   background-color: #fff;
   border: 3px solid black;
+  /* position: relative; */
 }
 
 /* -----相關活動----- */
@@ -232,20 +243,28 @@ input[name="tab_item"] {
 /* ====== Ｍedia Query ============= */
 /* Extra small 超小 (576px 以下) */
 @media screen and (max-width: 576px) {
+  .apply-01 {
+    display: none !important;
+  }
 }
 
 /* =============================== */
 /* Small 小型裝置sm (576px 以上) */
 @media (min-width: 576px) {
+  .apply-02 {
+    display: none !important;
+  }
 }
 
 /* 576-768之間的畫面 */
 @media (min-width: 576px) and (max-width: 768px) {
+
 }
 
 /* ================================ */
 /* Medium 中型裝置md (768px 以上) */
 @media (min-width: 768px) {
+
 }
 
 /* 768-992之間的畫面 */
